--- a/index.html
+++ b/index.html
@@ -512,7 +512,8 @@
             <div class="ad-placeholder">
                 <i class="fas fa-ad"></i>
                 <p>AdSense Advertisement Space</p>
-                <div class="ad-code">Ad Unit ID: YOUR_AD_UNIT_ID</div>
+                <div class="ad-code">ca-app-pub-5772892064177849~2926712869: ca-app-pub-5772892064177849/3784530786
+                    </div>
             </div>
         </div>
         
